# newegg-crawler

./: .gitignore  README.md  database.py  encryption.py  newegg_crawl.py  newegg_crawl_config.py  project_logging.py  pyproject.toml  requirements.txt
