[tool.poetry]
name = "newegg-crawler"
version = "1.0.0"
description = "Product scraper for Newegg.com"
authors = ["Trey Brittain"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "~=3.0.6"
win10toast = "~=0.9"
selenium = "~=3.141.0"
pip = "~=20.3.3"
urllib3 = "~=1.26.2"
setuptools = "~=51.1.2"
numpy = "~=1.19.5"
pandas = "~=1.2.0"
alive-progress = "~=1.6.2"
requests = "^2.26.0"
APScheduler = "^3.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
